envoy/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service1"
                route:
                  cluster: service1
                  prefix_rewrite: "/"
              - match:
                  prefix: "/service2"
                route:
                  cluster: service2
                  prefix_rewrite: "/"
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: service1
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: round_robin
    health_checks:
      timeout: 2s
      interval: 2s
      unhealthy_threshold: 3
      healthy_threshold: 3
      http_health_check:
        path: "/"
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 80
  - name: service2
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: round_robin
    health_checks:
      timeout: 2s
      interval: 2s
      unhealthy_threshold: 3
      healthy_threshold: 3
      http_health_check:
        path: "/"
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service2
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
